# autotools-extra-sources-example

./: Makefile.am  configure.ac  example.c  example.h  extra-generic.c  extra-special.c  libexample.c  libexample.h  libextra-generic.c  libextra-special.c
m4/: ax_special.m4
